Second Updated Two Sample T Tests Lab

--- a/index.ipynb
+++ b/index.ipynb
@@ -42,12 +42,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from scipy import stats\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
+    "import numpy as np #importing numpy library\n",
+    "from scipy import stats #importing stats library\n",
+    "import seaborn as sns #Importing seaborn for graphs\n",
+    "import matplotlib.pyplot as plt #Importing matplotlib for plots\n",
     "\n",
-    "sns.set_style('whitegrid')\n",
+    "sns.set_style('whitegrid') #Setting style for graphs\n",
     "\n",
     "%config InlineBackend.figure_format = 'retina'\n",
     "%matplotlib inline"
@@ -101,10 +101,10 @@
     }
    ],
    "source": [
-    "sns.set(color_codes = True)\n",
-    "sns.set(rc = {'figure.figsize': (12, 10)})\n",
-    "sns.distplot(control)\n",
-    "sns.distplot(experimental);"
+    "sns.set(color_codes = True) #Setting color codes\n",
+    "sns.set(rc = {'figure.figsize': (12, 10)}) #Setting figure size\n",
+    "sns.distplot(control) #Blue distribution\n",
+    "sns.distplot(experimental); #Orange distribution"
    ]
   },
   {
@@ -157,9 +157,10 @@
     }
    ],
    "source": [
-    "control.mean()\n",
-    "experimental.mean()\n",
-    "experimental.mean() - control.mean()"
+    "#Difference between distribution means\n",
+    "control.mean() #finding the mean for control group\n",
+    "experimental.mean() #finding the mean for experimental group\n",
+    "experimental.mean() - control.mean() #difference between distribution means"
    ]
   },
   {
@@ -197,9 +198,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sample_variance(sample):\n",
-    "    sample_mean = np.mean(sample)\n",
-    "    return np.sum((sample - sample_mean) **2) / (len(sample) - 1)"
+    "def sample_variance(sample): #defining function\n",
+    "    sample_mean = np.mean(sample) #Setting the sample mean equal to the calculated mean of the sample\n",
+    "    return np.sum((sample - sample_mean) **2) / (len(sample) - 1) #returns variance"
    ]
   },
   {
@@ -215,10 +216,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pooled_variance(sample1, sample2):\n",
-    "    n_1, n_2 = len(sample1), len(sample2)\n",
-    "    var_1, var_2 = sample_variance(sample1), sample_variance(sample2)\n",
-    "    return ((n_1-1) * var_1 + (n_2-1)* var_2)/((n_1 + n_2)-2)"
+    "def pooled_variance(sample1, sample2): #Defining function\n",
+    "    n_1, n_2 = len(sample1), len(sample2) #setting numbers\n",
+    "    var_1, var_2 = sample_variance(sample1), sample_variance(sample2)  #setting variables\n",
+    "    return ((n_1-1) * var_1 + (n_2-1)* var_2)/((n_1 + n_2)-2) #returns pooled sample variance"
    ]
   },
   {
@@ -245,17 +246,16 @@
     }
    ],
    "source": [
-    "def twosample_tstatistic(expr, ctrl):\n",
-    "    exp_mean, ctrl_mean = np.mean(expr), np.mean(ctrl)\n",
-    "    pool_var = pooled_variance(expr, ctrl)\n",
-    "    n_e, n_c = len(expr), len(ctrl)\n",
-    "    num = exp_mean - ctrl_mean\n",
-    "    denom = np.sqrt(pool_var * ((1/n_e)+(1/n_c)))\n",
+    "def twosample_tstatistic(expr, ctrl): #Defining function\n",
+    "    exp_mean, ctrl_mean = np.mean(expr), np.mean(ctrl) #setting means\n",
+    "    pool_var = pooled_variance(expr, ctrl) #using function to calculate pooled variance\n",
+    "    n_e, n_c = len(expr), len(ctrl) #setting n to length of each group\n",
+    "    num = exp_mean - ctrl_mean #calculating mean difference and setting it as the numerator\n",
+    "    denom = np.sqrt(pool_var * ((1 / n_e) + (1 / n_c))) #Setting the denominator\n",
     "    return num / denom\n",
     "\n",
-    "t_stat = twosample_tstatistic(experimental, control)\n",
-    "t_stat\n",
-    "# -1.8915462966190268"
+    "t_stat = twosample_tstatistic(experimental, control) #Setting t_stat\n",
+    "t_stat"
    ]
   },
   {
@@ -289,44 +289,38 @@
     }
    ],
    "source": [
+    "#Visualize p_value\n",
     "def visualize_t(t_stat, n_control, n_experimental):\n",
-    "    \n",
     "    \"\"\"\n",
     "    Visualize the critical t values on a t distribution\n",
     "    \n",
     "    Parameters\n",
-    "    -----------\n",
+    "    ----------\n",
     "    t-stat: float\n",
     "    n_control: int\n",
     "    n_experiment: int\n",
     "    \n",
     "    Returns\n",
-    "    ----------\n",
+    "    --------\n",
     "    None\n",
-    "    \n",
     "    \"\"\"\n",
-    "    # initialize a matplotlib \"figure\"\n",
-    "    fig = plt.figure(figsize=(8,5))\n",
-    "    ax = fig.gca()\n",
-    "    # generate points on the x axis between -4 and 4:\n",
+    "    #initialize a matplotlib \"figure\"\n",
+    "    fig = plt.figure(figsize = (8, 5)) #Setting figure size\n",
+    "    ax = fig.gca() #Gets the axes\n",
+    "    #Generate points on the x axis between -4 and 4:\n",
     "    xs = np.linspace(-4, 4, 500)\n",
-    "\n",
-    "    # use stats.t.ppf to get critical value. For alpha = 0.05 and two tailed test\n",
-    "    crit = stats.t.ppf(1-0.025, (n_control+n_experimental-2))\n",
-    "    \n",
-    "    # use stats.t.pdf to get values on the probability density function for the t-distribution\n",
-    "    \n",
-    "    ys= stats.t.pdf(xs, (n_control+n_experimental-2), 0, 1)\n",
-    "    ax.plot(xs, ys, linewidth=3, color='darkred')\n",
-    "\n",
-    "    ax.axvline(crit, color='black', linestyle='--', lw=5)\n",
-    "    ax.axvline(-crit, color='black', linestyle='--', lw=5)\n",
-    "    \n",
-    "    plt.show()\n",
+    "    #Use stats.t.ppf to get critical value. For alpha = 0.05 and two tailed test\n",
+    "    crit = stats.t.ppf(1 - 0.025, (n_control + n_experimental - 2))\n",
+    "    #Use stats.t.pdf to get values on the probability density function for the t-distribution\n",
+    "    ys = stats.t.pdf(xs, (n_control + n_experimental - 2), 0, 1)\n",
+    "    ax.plot(xs, ys, linewidth = 3, color = 'darkred') #Plotting\n",
+    "    ax.axvline(crit, color = 'black', linestyle = '--', lw = 5) #Setting + ax line\n",
+    "    ax.axvline(-crit, color = 'black', linestyle = '--', lw = 5) #Setting - ax line\n",
+    "    plt.show() #showing plot\n",
     "    return None\n",
     "\n",
-    "n_control = len(control)\n",
-    "n_experimental = len(experimental)\n",
+    "n_control = len(control) #setting n of control to length\n",
+    "n_experimental = len(experimental) #setting n of experimental to length\n",
     "visualize_t(t_stat, n_control, n_experimental)"
    ]
   },
@@ -353,13 +347,13 @@
     }
    ],
    "source": [
-    "## Calculate p_value\n",
-    "# Lower tail comulative density function returns area under the lower tail curve\n",
-    "lower_tail = stats.t.cdf(-1.89, (50+50-2), 0, 1)\n",
-    "# Upper tail comulative density function returns area under upper tail curve\n",
-    "upper_tail = 1. - stats.t.cdf(1.89, (50+50-2), 0, 1)\n",
+    "#Calculate p_value\n",
+    "#Lower tail cumulative density function returns area under the lower tail curve\n",
+    "lower_tail = stats.t.cdf(-1.89, (50 + 50 - 2), 0, 1)\n",
+    "#Upper tail cumulative density function returns area under upper tail curve\n",
+    "upper_tail = 1 - stats.t.cdf(1.89, (50 + 50 - 2), 0, 1)\n",
     "\n",
-    "p_value = lower_tail+upper_tail\n",
+    "p_value = lower_tail + upper_tail #calculating p-value\n",
     "print(p_value)"
    ]
   },
@@ -387,13 +381,11 @@
     }
    ],
    "source": [
-    "## your code here\n",
     "'''\n",
-    "Calculates the t-test for the means of *two independent* samples of scores.\n",
+    "Calculates the ttest for th means of *two independent* samples of scores.\n",
     "\n",
-    "This is a two-sided test for the null hypothesis that 2 independent samples\n",
-    "have identical average (expected) values. This test assumes that the\n",
-    "populations have identical variances by default.\n",
+    "This is a two-sided test for the null hypothesis that 2 independent samples have identical\n",
+    "average(expected) values. This test assumes that the populations have identical variances by default.\n",
     "'''\n",
     "\n",
     "stats.ttest_ind(experimental, control)"
